# KiP

./: .env.example  .gitignore  AI_INSTRUCTIONS.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  TASKS.md  initialsetup.bat  requirements-dev.txt
.github/workflows/: ci.yml  draft_pipeline.yml  publish.yml  topic_scaffold.yml
apps/main-website/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
apps/main-website/src/layouts/: Base.astro
apps/main-website/src/lib/: loadContent.ts
apps/main-website/src/pages/: index.astro
apps/main-website/src/pages/articles/: [slug].astro
content/editorial-pipeline/: edition.yaml
content/editorial-pipeline/topics/topic-0001/: meta.yaml
content/editorial-pipeline/topics/topic-0001/articles/: 2025-08-article-sample.md
content/editorial-pipeline/topics/topic-0001/assets-manifests/: asset-001.json
content/editorial-pipeline/topics/topic-0001/drafts/: draft.md
governance/: charter.md  corrections_policy.md  ethics.md
prompts/: debias_prompt.md  drafting_prompt.md  extraction_prompt.md  system_policies.md
schemas/: claim.schema.json  source.schema.json  verification_schema  verification_schema.json
tools/newsroom-cli/: cli.py  pyproject.toml
tools/newsroom-cli/newsroom_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tools/newsroom_cli/: README.md  cli.py  pyproject.toml
tools/newsroom_cli/newsroom-cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/newsroom_cli/newsroom_cli.egg-info/: PKG-INFO
tools/newsroom_cli/tests/: test_cli_basic.py
(+4 files in other folders)
