[project]
name = "newsroom_cli"
version = "0.1.0"
dependencies = ["typer>=0.12.0", "newsroom_core"]
[project.scripts]
newsroom = "newsroom_cli.cli:app"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["newsroom_cli*"]
